Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -304,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fd8ddacd438>"
+       "<folium.map.Marker at 0x7f4fd3e82668>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
