--- a/index.ipynb
+++ b/index.ipynb
@@ -440,16 +440,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fd8ddad9b38>"
+       "<folium.map.Marker at 0x7f4fd3e9acf8>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
